--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
       </div>
       <!-- search box -->
       <div class="row">
-
         <div class="col-10 mx-auto col-md-6">
           <form>
             <div class="input-group mb-3">
@@ -167,11 +166,11 @@
               </div>
               <input type="text" class="form-control" placeholder='item....' id="search-item">
             </div>
-
           </form>
         </div>
       </div>
       <!--end of filter buttons -->
+
       <!-- store  items-->
       <div class="row" class="store-items" id="store-items">
         <!-- single item -->
@@ -187,11 +186,8 @@
               <div class="card-text d-flex justify-content-between text-capitalize">
                 <h5 id="store-item-name">sweet item</h5>
                 <h5 class="store-item-value">$ <strong id="store-item-price" class="font-weight-bold">5</strong></h5>
-
               </div>
             </div>
-
-
           </div>
           <!-- end of card-->
         </div>
@@ -209,11 +205,8 @@
               <div class="card-text d-flex justify-content-between text-capitalize">
                 <h5 id="store-item-name">cupcake item</h5>
                 <h5 class="store-item-value">$ <strong id="store-item-price" class="font-weight-bold">5</strong></h5>
-
               </div>
             </div>
-
-
           </div>
           <!-- end of card-->
         </div>
@@ -438,11 +431,10 @@
           <!-- end of card-->
         </div>
         <!--end of single store item-->
-
       </div>
+    </div>
   </section>
   <!--end of store items -->
-
 
   <!-- modal-container -->
   <div class="container-fluid ">
@@ -453,9 +445,9 @@
         <span class="lightbox-control btnLeft"><i class="fas fa-caret-left"></i></span>
         <span class="lightbox-control btnRight"><i class="fas fa-caret-right"></i></span>
       </div>
-
     </div>
   </div>
+
 
 
   <!-- jquery -->
